Fix search bar on mobile (iOS)
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@574 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/style/wp4.css
+++ b/wordpress.org/public_html/style/wp4.css
@@ -419,7 +419,11 @@ a img.aligncenter {
 @media screen and (min-width:480px) {
 	#head-search form {
 		margin-left: 0;
+    width: 248px;
 	}
+  #head-search input.text {
+    width: 216px;
+  }
 }
 @media screen and (min-width:768px) {
 
